# IntelligentCar_Baidu

./: CMakeLists.txt  README.md  README_SASU.md  ULTRA_CAR_MASTER.code-workspace  compile.sh  config.json  init.sh
config/: config_0.json  config_1.json  config_2.json
doc/: structure_of_program.md
include/: common_program.h  common_system.h  libdata_process.h  libdata_store.h  libimage_process.h  libmodel.h  libuart_eb.h  path.h  predictor_api.h
include/model/: detection.hpp
lib/: libdata_process.cpp  libimage_process.cpp  libmodel.cpp  libmodel_onnx.cpp  libmodel_ppnc.cpp  libuart_eb.cpp  libuart_wz.cpp
model/: nms.tar
model/config/: .config_ppncnms.json.swp  config_ppncnms.json  config_ppncnna.json
model/model_3/: nms.tar
race/: README.md  README_SASU.md
race/config/: config_0.json
race/include/: common_system.h  libdata_process.h  libdata_store.h  libimage_process.h  libuart_wz.h  path.h
race/lib/: libdata_process.cpp  libimage_process.cpp  libmodel_ppnc.cpp  libuart_eb.cpp
race/src/: ULTRA_CAR_MASTER.code-workspace  main.cpp  path_across.cpp  path_circle.cpp  path_model.cpp  path_side_search.cpp
race/tool/: compile.sh  init.sh
race/tool/ImageCollect_Tool/src/: ImageCollect.cpp
self/: README.md
src/: .main.cpp.swp  ULTRA_CAR_MASTER.code-workspace  main.cpp  path_across.cpp  path_circle.cpp  path_model.cpp  path_side_search.cpp
tool/ImageCollect_Tool/: CMakeLists.txt
tool/ImageCollect_Tool/src/: ImageCollect.cpp
